# data-analysis

./: .gitignore  README.md  data-analysis.ipynb  payout-charts.ipynb  pyproject.toml
src/: uniswap_v2_pair_abi.py
src/graph_api/: array_to_df.py  graph_query_template.py  graph_to_df.py  uni_v2_graph_fetcher.py
src/local_node/: event_scanner.py  process_state_to_df.py  scanner_runner.py
test/graph_api/: test_dict_to_df.py  test_graph_queryier.py  test_transaction_fetcher.py
test/local_node/: test_scanner_with_node.py
