[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = "analyze swaps in AMMs"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.8"
gql = {extras = ["requests"], version = "^3.4.0"}
pandas = "^1.5.3"
tabulate = "^0.9.0"
web3 = "^5.31.3"
tqdm = "^4.64.1"
notebook = "~6.4"
matplotlib = "^3.6.3"
pip = "^22.3.1"
install = "^1.3.5"
jupyterlab = "^3.5.3"
ipympl = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
